// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector: Account billing form changePlanInitialValues when NOT self serve should find and return secret plan 1`] = `
Object {
  "billingAddress": Object {
    "firstName": "ann",
    "lastName": "perkins",
  },
  "email": "ann@perkins.com",
  "planpicker": Object {
    "billingId": "ABC",
    "code": "50M-shh",
    "status": "secret",
  },
}
`;

exports[`Selector: Account billing form changePlanInitialValues when NOT self serve should return change plan values: with a billing id 1`] = `
Object {
  "billingAddress": Object {
    "firstName": "ann",
    "lastName": "perkins",
  },
  "email": "ann@perkins.com",
  "planpicker": Object {
    "billingId": "1",
    "code": "abc",
  },
}
`;

exports[`Selector: Account billing form changePlanInitialValues when NOT self serve should return change plan values: without billing id 1`] = `
Object {
  "billingAddress": Object {
    "firstName": "ann",
    "lastName": "perkins",
  },
  "email": "ann@perkins.com",
  "planpicker": Object {
    "code": "im not free",
    "isFree": false,
  },
}
`;

exports[`Selector: Account billing form onboardingInitialValues should gracefully handle invalid plan values from /join 1`] = `
Object {
  "billingAddress": Object {
    "firstName": "ann",
    "lastName": "perkins",
  },
  "planpicker": Object {
    "code": "im free",
    "isFree": true,
  },
}
`;

exports[`Selector: Account billing form onboardingInitialValues should set reasonable defaults 1`] = `
Object {
  "billingAddress": Object {
    "firstName": "ann",
    "lastName": "perkins",
  },
  "planpicker": Object {
    "code": "im free",
    "isFree": true,
  },
}
`;

exports[`Selector: Account billing form onboardingInitialValues should set the plan picker to the plan specified by /join 1`] = `
Object {
  "billingAddress": Object {
    "firstName": "ann",
    "lastName": "perkins",
  },
  "planpicker": Object {
    "code": "im not free",
    "isFree": false,
  },
}
`;

exports[`Selector: Account billing form updateConteactInitialValues should return update contact values 1`] = `
Object {
  "billingContact": Object {
    "country": "GG",
    "email": "ann@perkins.com",
    "firstName": "ann",
    "lastName": "perkins",
    "state": "EZ",
    "zip": "54321",
  },
}
`;

exports[`Selector: Account billing form updatePaymentInitialValues should return update payment values 1`] = `
Object {
  "billingAddress": Object {
    "firstName": "ann",
    "lastName": "perkins",
  },
}
`;
